Fix vertical scrollbars.

--- a/themes/sc_ace/src/controls/scroll/vertical/vertical.css
+++ b/themes/sc_ace/src/controls/scroll/vertical/vertical.css
@@ -24,13 +24,13 @@
 	background: sprite("track_and_arrows.png" [0 -40 14 26]);
 	height: 26px;
     width: 14px;
-    bottom: 14px;
+    bottom: 16px;
 }
 
 @view(sc-scroller-view).sc-vertical .button-bottom {
 	position:absolute;
 	background: sprite("track_and_arrows.png" [0 -15 14 15]);
-	height: 15px;
+	height: 16px;
     width: 14px;
     bottom: 0px;
 }
